Further style changes. Currently this commit breaks the front page buttons, but this should be simple to fix with margins. The main change was adding explicit row sizes in the grid.

--- a/assets/css/style-grid.css
+++ b/assets/css/style-grid.css
@@ -1,30 +1,26 @@
-.main-area {
-    margin: 2em;
-    padding: 1em;
-    border: 1px solid #41444B;
-}
-
-
 .masthead {
-    padding: 1.4em 1em .7em;
+    padding: 1.4em 1em 0;
     text-align: center;
-    border-bottom: 1px solid #18191B;
 }
 
 .site-title {
     font-family: 'Dancing Script', cursive;
-    margin: 0;
+    margin: 10px 0;
     padding: 0;
-    font-size: 1.8em;
+    font-size: 3em;
     font-weight: 200;
 }
 
 .site-description {
     font-family: 'Roboto Condensed', sans-serif;
-    margin-top: 0;
+    margin: 0;
     font-size: 70%;
     text-transform: uppercase;
     font-weight: 100;
+}
+
+.main-area {
+    padding: 0;
 }
 
 body {
@@ -37,9 +33,9 @@ body {
 .the-grid {
   display: grid;
   width: 600px;
-  border: 1px solid #ededed;
   margin: 0 auto;
   grid-template-columns: 200px 200px 200px;
+  grid-template-rows: 50px 200px;
 }
 
 .grid-title {
@@ -56,13 +52,17 @@ body {
 
 .grid-bottomleft{
   grid-column: 1/2;
-  grid-row: 5/6;
+  grid-row: 8/9;
 }
 
 .grid-form{
   grid-column: 1/4;
   grid-row: 2/5;
   display: grid;
+}
+
+.grid-formresults{
+  grid-column: 1/4;
 }
 
 .subgrid-formdropdown{
